--- a/index.html
+++ b/index.html
@@ -1,6 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kostka Lab - Computational Developmental Biology</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-  <h1>Welcome.</h1>
+    <script src="header.js"></script>
+
+    <main>
+        <section class="hero">
+            <h1>Computational Regulatory Genomics</h1>
+            <p class="subtitle">Understanding gene regulation in the context of disease</p>
+            
+            <p class="affiliation">
+                <strong>University of Pittsburgh</strong> | 
+                <a href="https://www.ccbb.pitt.edu/">Department of Computational & Systems Biology</a>
+            </p>
+
+            <div class="research-box">
+                <p class="description">We develop machine learning and systems biology approaches to understand gene regulation at single-cell resolution. By integrating multi-modal data—transcriptomic, epigenomic, metabolomic, and more—we study how cells acquire and maintain identity, and how genetic variation contributes to disease. Our translational applications span multiple organ systems and model organisms.</p>
+            </div>
+
+            <div class="button-group">
+                <a href="team.html" class="btn">Meet Our Team</a>
+                <a href="publications.html" class="btn btn-secondary">View Publications</a>
+            </div>
+        </section>
+
+        <section>
+            <h2>Affiliations</h2>
+            <ul class="affiliations-list">
+                <li>
+                    <a href="https://www.medschool.pitt.edu/">University of Pittsburgh School of Medicine</a>
+                </li>
+                <li>
+                    <a href="https://www.ccbb.pitt.edu/">Department of Computational & Systems Biology</a>
+                </li>
+                <li>
+                    <a href="https://www.cebam.pitt.edu/">Pittsburgh Center for Evolutionary Biology and Medicine (CEBaM)</a>
+                </li>
+                <li>
+                    <a href="https://www.compbio.cmu.edu/">Joint CMU - U Pitt Ph.D. Program in Computational Biology (CPCB)</a>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <p style="color: #666; font-size: 0.95rem;">
+                <strong>Lab Funding:</strong> University of Pittsburgh School of Medicine | National Institutes of Health
+            </p>
+        </section>
+    </main>
+
+    <script src="footer.js"></script>
 </body>
 </html>
