--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kostka Lab - Computational Developmental Biology</title>
+    <title>Kostka Lab</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,9 +11,9 @@
 
     <main>
         <section class="hero">
-            <h1>Computational Regulatory Genomics</h1>
-            <p class="subtitle">Understanding gene regulation in the context of disease</p>
-            
+            <h2>Decoding Gene Regulation to Understand Disease</h2>
+            <!-- <p class="subtitle">Understanding gene regulation in the context of disease</p>
+             -->
             <p class="affiliation">
                 <strong>University of Pittsburgh</strong> | 
                 <a href="https://www.ccbb.pitt.edu/">Department of Computational & Systems Biology</a>
